--- a/main.css
+++ b/main.css
@@ -2,3 +2,45 @@
     margin:0;
     padding:0;
 }
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+.loader-container{
+    position: absolute;
+    inset: 0;
+    height: 100vh;
+    z-index: 10;
+    background: #5A3F37;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2C7744, #5A3F37);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2C7744, #5A3F37); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    display: grid;
+    place-items: center;
+    align-content: center;
+    gap:1rem;
+}
+
+.loader-container .loader-text{
+    font-size: 1.5rem;
+    text-align: center;
+    color: white;
+}
+
+.loader{
+    max-width: 500px;
+    width:50%;
+    height:20px;
+    border: 1px solid white;
+    border-radius: 1em;
+    position: relative;
+    overflow: hidden;
+}
+
+.loader .loader-main{
+    content: "";
+    display: block;
+    width:0%;
+    height:100%;
+    background:#2ecc71;
+}
+
